<resources>

    //18

    <string name="hint_fish_nazwa">Nazwa...</string>
    <string name="hint_fish_data">Data...</string>
    <string name="hint_fish_wielkosc">Wielkosc...</string>
    <string name="hint_fish_waga">Waga...</string>
    <string name="hint_fish_jezioro">Jezioro...</string>
    <string name="button_save">ZAPISZ</string>
    <string name="empty_not_save">Ryba nie została zapisana, ponieważ występują puste pola.</string>

    <string name="fish_updated">Zaaktualizowanie ryby.</string>


    <string name="fish_camera">ZDJECIE</string>

    <string name="camera_take">ZRÓB ZDJECIE</string>
    <string name="camera_image">ZOBACZ ZDJECIE</string>
    <string name="fish_added">Dodaj rybę</string>
    <string name="app_name">WędkarzApp</string>
    <string name="action_settings">Ustawienia</string>


    <string name="fish_start">WEJDZ</string>



    <string name="p1">RYBA</string>
    <string name="p2">DATA</string>
    <string name="p3">WIELKOŚĆ</string>
    <string name="p4">WAGA</string>
    <string name="p5">JEZIORO</string>



    <string name="wsiza">WSCHODY I ZACHODY SŁOŃCA</string>
    <string name="baza">BAZA POŁOWÓW</string>


    <string name="wsd">Wschód słońca dziś: </string>
    <string name="zsd">Zachód słońca dziś: </string>

    <string name="wsj">Wschód słońca jutro: </string>
    <string name="zsj">Zachód słońca jutro: </string>

</resources>
